tests/rosetta/out/Smalltalk/approximate-equality.st
" Generated by Mochi compiler v0.10.26 on 2025-07-16T09:48:36Z
"
| a abs b guess i isClose main maxf pairs relTol root2 s sqrtApprox t u |
abs := [:x | ((x < 0)) ifTrue: [
  -x
] .
x ].
maxf := [:a :b | ((a > b)) ifTrue: [
  a
] .
b ].
isClose := [:a :b | relTol := 1e-09.
t := abs value: (a - b).
u := (relTol * maxf value: abs value: a value: abs value: b).
(t <= u) ].
sqrtApprox := [:x | guess := x.
i := 0.
[(i < 10)] whileTrue: [
  guess := ((guess + (x / guess)) / 2).
  i := (i + 1).
]
.
guess ].
main := [ | root2 := sqrtApprox value: 2.
pairs := {{1.0000000000000002e+14. 1.0000000000000002e+14}. {100.01. 100.011}. {(1.0000000000000002e+13 / 10000). 1.0000000000000001e+09}. {0.001. 0.0010000001}. {1.01e-22. 0}. {(root2 * root2). 2}. {(-root2 * root2). -2}. {1e+17. 1e+17}. {3.141592653589793. 3.141592653589793}}.
pairs do: [:pair |
  a := pair at: 0.
  b := pair at: 1.
  s := (isClose value: a value: b) ifTrue: ['≈'] ifFalse: ['≉'].
  Transcript show: ((((((a asString) + ' ') + s) + ' ') + (b asString))) printString; cr.
]
. ].
main value.
